Added JAVA_OPTS + entrypoint script
Signed-off-by: Matt Bentley <mbentley@mbentley.net>