@@ -18,21 +18,23 @@ RUN apt-get update &&\
   chmod +x /usr/local/bin/docker &&\
   rm -rf /tmp/docker /tmp/docker-${DOCKER_VERSION}.tgz /var/lib/apt/lists/* &&\
   mkdir -p /var/lib/jenkins/plugins &&\
-  chown -R 510:510 /var/lib/jenkins
-
-ENV JENKINS_HOME /var/lib/jenkins
-
-RUN userdel jenkins &&\
+  chown -R 510:510 /var/lib/jenkins &&\
+  userdel jenkins &&\
   groupadd -g 510 jenkins &&\
   groupadd -g 998 docker &&\
   groupadd -g 999 docker2 &&\
-  useradd -u 510 -g 510 -G docker,docker2 -d /var/lib/jenkins jenkins
-
-RUN echo 'jenkins            ALL = (ALL) NOPASSWD: ALL' > /etc/sudoers.d/jenkinsnosudo &&\
+  useradd -u 510 -g 510 -G docker,docker2 -d /var/lib/jenkins jenkins &&\
+  echo 'jenkins            ALL = (ALL) NOPASSWD: ALL' > /etc/sudoers.d/jenkinsnosudo &&\
   chmod 0440 /etc/sudoers.d/jenkinsnosudo
+
+# JAVA_OPTS best practices come from https://support.cloudbees.com/hc/en-us/articles/222446987-Prepare-Jenkins-for-Support
+ENV JENKINS_HOME=/var/lib/jenkins \
+  JAVA_OPTS="-Xmx8g -Xms8g -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+DisableExplicitGC -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -verbose:gc -Xlog:gc*"
+
+COPY entrypoint.sh /entrypoint.sh
 
 USER jenkins
 VOLUME /var/lib/jenkins
 EXPOSE 8080
-ENTRYPOINT ["tini", "--"]
-CMD ["java","-jar","/usr/share/jenkins/jenkins.war"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["jenkins"]
